--- a/Aplikasiku/app/src/main/res/values/strings.xml
+++ b/Aplikasiku/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-	<string name="app_name">Aplikasiku</string>
-	<string name="logo_text">Aplikasiku</string>
+	<string name="app_name"> Aplikasiku </string>
+	<string name="logo_text">Malang Creative App</string>
 	<string name="sign_in">Sign In</string>
 	<string name="welcome_back">Welcome Back</string>
 	<string name="sign_in_to_continue">Sign in to continue</string>
@@ -16,4 +16,7 @@
 	<string name="confirm_password">Confirm Password</string>
 	<string name="send_request">Send Request</string>
 	<string name="change_password">Change Password</string>
+    <string name="reset_password_anda_telah_sukses_silahkan_login_dengan_password_baru_anda">Reset Password Anda telah Sukses. SIlahkan Login dengan Password Baru Anda</string>
+	<string name="successful">Successful!!</string>
+	<string name="todo">TODO</string>
 </resources>
